@@ -4080,8 +4080,8 @@ void battle_set_defaults() {
 	battle_config.mob_sc_def_rate = 100;
 	battle_config.pc_luk_sc_def = 300;
 	battle_config.mob_luk_sc_def = 300;
-	battle_config.pc_max_sc_def = 10000;
-	battle_config.mob_max_sc_def = 5000;
+	battle_config.pc_max_sc_def = 100;
+	battle_config.mob_max_sc_def = 50;
 	battle_config.sg_miracle_skill_ratio=1;
 	battle_config.sg_angel_skill_ratio=1;
 	battle_config.sg_miracle_skill_duration=3600000;
