@@ -1,5 +1,8 @@
 Date	Added
 
+2007/04/11
+	* The pc_max_status_def and mob_max_status_def configs are now set on a
+	  1-100 scale instead of 1-10000 (status.conf)
 2007/04/03
 	* Added hom_setting&0x40, when set it clears the "can't reuse" skill delay
 	  when you vaporize a homunculus (set by default). [Skotlex]
